	Remove extra files.
	* AUTHORS: Consolidate with src/AUTHORS.
	* src/plugins/Makefile.am, src/plugins/Makefile.in: Ship RelGraph.py 
	and rel_it.py.
	* src/ArgHandler.py: Split off gramps_main into a separate file.
	* src/gramps_main.py: Likewise.
	* src/Makefile.am, src/Makefile.in: Ship src/ArgHandler.py.
	* NEWS: More items.

2003-10-12  Don Allingham  <dallingham@users.sourceforge.net>
	* src/RelLib.py : support for capitalized name formats
	* src/EditPerson.py: eliminate capitilzing names, instead rely on
	the display formats
	* src/Utils.py: new display formats for names
	* src/GrampsCfg.py: eliminate name only option in status line,
	add support for capitalized name formats
	* src/gramps_main.py: eliminate name only option in status line
	* src/preferences.glade : eliminate name only option in status line,
	drop capitalize in favor of expanded name format
	* src/plugins/GraphViz.py: install only for python 2.2
	* src/plugins/WebPage.py: handle page titles
	* src/docgen/HtmlDoc.py: handle page titles

2003-10-11  Lorenzo Cappelletti  <lorenzo.cappelletti@email.it>
	* src/plugins/rel_it.py: Italian relationship calculator
	added
	* src/plugins/RelGraph.py: Advanced relationship graph
	report generator

2003-10-11  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/HTMLDoc.py: removed references to 
	gnome.ui.WarningDialog

2003-10-10  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: fix reference paths
	* src/PeopleView.py: remove gobject import
	* src/FamilyView.py: return name prefix/surname tuple
	* Makefile.am: installation path from grampslib.so
	* src/plugins/Verify.py: add ability to disable age estimation
	* src/plugins/verify.glade: add ability to disable age estimation
	
2003-10-10  Tim Waugh  <twaugh@redhat.com>
	* src/PeopleStore.py: Fixed bug where you needed to expand the row
	twice before it shows the people.

2003-10-09  Alex Roitman  <shura@alex.neuro.umn.edu>